syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

message RegisterRequest {
    string serviceName = 1;
    string qualificator = 2;
    string target = 3;
  }
  
message RegisterResponse {}

message LookupRequest {
    string serviceName = 1;
    string qualificator = 2;
}
  
message LookupResponse {
    repeated ServerInfo serverEntry = 1;
}

message ServerInfo {
    string target = 1;
    string qualificator = 2;
}
  
message DeleteRequest {
    string serviceName = 1;
    string target = 2;
}
  
message DeleteResponse {}

service NamingServerService {
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc lookup(LookupRequest) returns (LookupResponse);
}